# ik_llama.cpp

./: .gitignore  CMakeLists.txt  KV_BRIDGE_IMPLEMENTATION_TASKLIST.md  RDMA_augmented_ik_llama_plan.md  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
.planning/: LAYER_MAJOR_STREAMING_PREFILL_PORT.md
common/: common.cpp  common.h
docs/: CPU_EXPERT_BANDWIDTH_OFFLOAD_implementation_plan.md  GPU_ANE_PREFILL_implementation_plan.md  hybrid-handoff-test-guide.md
docs/benchmarks/: kv_bridge_report_template.md
docs/wir/: state-batch-compiler-plan.md  (+5 more)
examples/: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/tests/: CMakeLists.txt  test-ane-backend.mm  test-ane-hardware.mm
include/: llama.h
scripts/: bench-ane.sh  bench_kv_bridge.sh  prefill_decode_job_queue.py  run_kv_bridge_matrix.sh  run_phase1_prefill_handoff_job.sh  run_phase2_handoff_from_artifact.sh  run_phase2_prefill_to_artifact.sh  run_rpc_server_keepalive.sh  run_single_machine_buffered_e2e.sh  tbp_replay_to_kv_receiver.py  test_prefill_decode_job_queue.sh  test_prefill_decode_phase2_pipeline.sh  validate_dual_mac_decode_server.sh
src/: CMakeLists.txt  llama-ane-dispatch.cpp  llama-ane-dispatch.h  llama-ane-weights.cpp  llama-ane-weights.h  llama-build-context.cpp  llama-context.h  llama-cparams.h  llama-decode-handoff.cpp  llama-decode-handoff.h  llama-kv-artifact.cpp  llama-kv-artifact.h  llama-kv-gather.cpp  llama-kv-gather.h  llama-kv-import.cpp  llama-kv-import.h  llama-kv-receiver.cpp  llama-kv-receiver.h  llama-kv-sync.cpp  llama-kv-sync.h  llama-layer-major.h  llama-load-tensors.cpp  llama-model.h  llama-prefill-strategy.cpp  llama-prefill-strategy.h  llama-prefill-stream.cpp  llama-prefill-stream.h  llama-prefill-telemetry.cpp  llama-prefill-telemetry.h  llama-sampling.cpp  llama-sampling.h  llama-tb-transport.cpp  llama-tb-transport.h  llama-token-stream.cpp  llama-token-stream.h  llama-weight-stage.cpp  llama-weight-stage.h  llama.cpp  unicode.cpp
tests/: CMakeLists.txt  test-ane-dispatch.cpp  test-ane-weights.cpp  test-decode-router.cpp  test-handoff-metadata.cpp  test-kv-bridge-cli.cpp  test-kv-bridge-parser.cpp
tools/: ane-layer-bench.cpp  bench-ane-prefill.cpp
tools/decode-receiver/: CMakeLists.txt  main.cpp
(+69 files in other folders)
